--- a/lxt/pro15620.html
+++ b/lxt/pro15620.html
@@ -228,7 +228,7 @@ var obj=document.getElementById(x);
         loader.style.display = "none";  
         _frame.style.visibility = "visible";   
     }
-    callframe.location.href="./src/mylogin.asp"; 
+    //callframe.location.href="./src/mylogin.asp"; 
 </script>
 </div>
 <div class="mc01b"> <img src="./src/img_272.jpg" alt=""></div>
