--- a/lxt/pro15620.html
+++ b/lxt/pro15620.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <title>JIEYA 3-pack Womens Sexy Panties Lace Floral Underwear Briefs-Assorted Color</title>
-<meta name="keywords" content="leather plus size lingerie,leather pants,black leather pants">
+<meta name="keywords" content=">JIEYA 3-pack Womens Sexy Panties Lace Floral Underwear Briefs-Assorted Color">
 <meta name="description" content="Wholesale women’s underwear, men’s underpants in varying designs, many customers spoke highly of this Plus Size Leather Zipper Black Panty at ohyeahlady.com. Buy sexy lingerie from China with low price.">
 <noscript>&lt;style type="text/css"&gt;body{display:none;}&lt;/style&gt;</noscript>
 <script async="" src="http://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="./src/jackfun.js "></script>
@@ -94,7 +94,7 @@ function DrawImage(ImgD){
     <div class="header01">
 	<div class="head_border_l"></div>
 		<div class="head_border_r"></div>  
-      <div class="logo" onclick="window.open(&#39;/&#39;,&#39;_self&#39;)" title="Ohyeahlady.com"></div>
+      <!--<div class="logo" onclick="window.open(&#39;/&#39;,&#39;_self&#39;)" title="Ohyeahlady.com"></div>-->
       <div class="hright" style="width: 775px">
         <div class="hr01" style="width: 770px">	
 <div>
@@ -132,7 +132,7 @@ function DrawImage(ImgD){
     float: left;
     width: 230px;
     color: #df18df;
-"><b>Ohyeah Lingerie Plus Size Expert</b></div>
+"><b></b></div>
 	  <!-- 开始滚动
 <style type="text/css"> 
 #gongao{width:950px;height:30px;overflow:hidden;line-height:30px;font-size:13px;font-family:'宋体';background:#fcdbf7;color:#ff5656;font-weight:bold;} 
@@ -271,8 +271,8 @@ var obj=document.getElementById(x);
           <div class="prod_detail">
 		   <table style="width:845px;" border="0" cellpadding="0" cellspacing="0" class="prod_rw">
 <tbody><tr>
-<td width="340" valign="top" align="center"><a id="mainpicurl" href="./src/20170220175352945294.jpg" target="_blank" class="bigphoto"><div class="noclass" style="background: url() no-repeat;position: absolute;height: 18px;width: 200px;bottom: 0px;top: 400px;left:15px">&nbsp;</div><img id="mainpic" src="./src/20170220175352945294.jpg" width="320" height="416" border="0" vspace="10" onload="javascript:DrawImage(this);" alt="Enlarge..."></a>
-<div style="margin: -10px 0px 10px 16px;"><a style="margin: 0px 10px;" href="javascript:void(0)" onmouseover="document.getElementById(&#39;mainpic&#39;).src =&#39;\\Uploadfiles\\product\\Image\\file\\20170220\\20170220175352945294.jpg&#39;;document.getElementById(&#39;mainpicurl&#39;).href=&#39;\\Uploadfiles\\product\\Image\\file\\20170220\\20170220175352945294.jpg&#39;;"><img style="border: 1px solid grey;" src="./src/20170220175352945294.jpg" width="56px"></a><a style="margin: 0px 10px;" href="http://www.ohyeahlady.com/en/html/prod_detail/Product_15619.html" onmouseover="document.getElementById(&#39;mainpic&#39;).src =&#39;\\Uploadfiles\\product\\Image\\file\\20170220\\20170220175184958495.jpg&#39;;;document.getElementById(&#39;mainpicurl&#39;).href=&#39;\\Uploadfiles\\product\\Image\\file\\20170220\\20170220175184958495.jpg&#39;;"><img style="border: 1px solid grey;" src="./src/20170220175184958495.jpg" width="56px"></a></div></td><td valign="top"><table style="width:488px;" border="0" cellpadding="0" cellspacing="0" class="prod_r">
+<td width="340" valign="top" align="center"><a id="mainpicurl" href="./src/color1.jpg" target="_blank" class="bigphoto"><div class="noclass" style="background: url() no-repeat;position: absolute;height: 18px;width: 200px;bottom: 0px;top: 400px;left:15px">&nbsp;</div><img id="mainpic" src="./src/color1.jpg" width="320" height="416" border="0" vspace="10" onload="javascript:DrawImage(this);" alt="Enlarge..."></a>
+<div style="margin: -10px 0px 10px 16px;"><a style="margin: 0px 10px;" href="javascript:void(0)" onmouseover="document.getElementById(&#39;mainpic&#39;).src =./src/color1.jpg;document.getElementById(&#39;mainpicurl&#39;).href=./src/color2.jpg;"><img style="border: 1px solid grey;" src="./src/color4.jpg" width="56px"></a><a style="margin: 0px 10px;" href="http://www.ohyeahlady.com/en/html/prod_detail/Product_15619.html" onmouseover="document.getElementById(&#39;mainpic&#39;).src =./src/color2.jpg;;document.getElementById(&#39;mainpicurl&#39;).href=./src/color2.jpg"><img style="border: 1px solid grey;" src="./src/color3.jpg" width="56px"></a></div></td><td valign="top"><table style="width:488px;" border="0" cellpadding="0" cellspacing="0" class="prod_r">
 <tbody><tr>
 <td width="80">Product Name </td>
 <td width="240" align="left"><span class="bold">Plus Size Leather Zipper Black Panty</span></td>
@@ -315,16 +315,16 @@ var obj=document.getElementById(x);
 </tr>
 <tr>
 <td colspan="2" class="xk">Details：<br><div style="margin: 10px;width: 815px;"><div style="height:150px;width: 110px;float: left;"><img src="./src/style-12.jpg" style="height:150px"></div><div><div><strong>Size Chart(CM)</strong></div><div style="margin: 10px;"><table border="1" cellspacing="0" cellpadding="0" style="text-align:center"><tbody><tr><td rowspan="2" width="70">size</td><td width="60">Panty Crotch</td><td width="140" colspan="2">Waist</td></tr><tr><td>Relax</td><td>Relax</td><td>Stretched</td></tr><tr><td>M</td><td>17</td><td>60</td><td>71</td></tr><tr><td>XL</td><td>19</td><td>64</td><td>81</td></tr><tr><td>2XL</td><td>20</td><td>68</td><td>86</td></tr><tr><td>3XL</td><td>21</td><td>72</td><td>91</td></tr></tbody></table></div></div><div style="float: left;width: 710;"><font style="color: red;">Note:</font><p>1.Because of different measuring methods , position and fabric stretch , the data will have a deviation of ±1~2cm The size chart is only for reference</p><p>2.Color difference may exist between different computer displays and different batches , specific please in kind prevail</p><p>3.Please refer to unit conversion: 1 INCH=2.54 CM or 1 CM=0.39 INCH</p></div><div style="width: 350px;float: left;height: 35px;"><img src="./src/notes-1.jpg" style="float: left;"><div style="margin: 12px;">Pls Wash it by hand in 30-degree water</div></div><div style="width: 350px;float: left;height: 35px;"><img src="./src/notes-3.jpg" style="float: left;"><div style="margin: 12px;">Pls hang to dry in shade</div></div><div style="width: 350px;float: left;height: 35px;"><img src="./src/notes-2.jpg" style="float: left;"><div style="margin: 9px;">Pls do not bleach</div></div><div style="width: 350px;float: left;height: 35px;"><img src="./src/notes-4.jpg" style="float: left;"><div style="margin: 8px;">Pls ironing on low heat</div></div></div><p>
-	&nbsp;<img width="835px" src="./src/20170220175221812181.jpg" alt=""><img width="835px" src="./src/20170220175247024702.jpg" alt=""> 
+	&nbsp;<img width="835px" src="./src/color1.jpg" alt=""><img width="835px" src="./src/color2.jpg" alt=""> 
 </p>
 <p>
-	<img width="835px" src="./src/20170327180542124212.jpg" alt=""> 
+	<img width="835px" src="./src/color3.jpg" alt=""> 
 </p>
 <p>
-	<img width="835px" src="./src/20170327180537193719.jpg" alt=""> 
+	<img width="835px" src="./src/color4.jpg" alt=""> 
 </p>
 <p>
-	<img width="835px" src="./src/20170327180556895689.jpg" alt=""> 
+	<img width="835px" src="./src/color5.jpg" alt=""> 
 </p></td>
 </tr>
 </tbody></table>
