--- a/lxt/pro15620.html
+++ b/lxt/pro15620.html
@@ -93,7 +93,8 @@ function DrawImage(ImgD){
     <div class="header01">
 	<div class="head_border_l"></div>
 		<div class="head_border_r"></div>  
-      <!--<div class="logo" onclick="window.open(&#39;/&#39;,&#39;_self&#39;)" title="Ohyeahlady.com"></div>-->
+      <!-- <div class="logo" onclick="window.open(&#39;/&#39;,&#39;_self&#39;)" title="zhuermu.com"></div> -->
+      <img class="logo" src="./src/images/logo.gif">
       <div class="hright" style="width: 775px">
         <div class="hr01" style="width: 770px">	
 <div>
@@ -117,7 +118,7 @@ function DrawImage(ImgD){
 <div style="float: left;margin: 10px 5px;font-size: 12px;color: red;">
 <a style="margin-left: 5px;color:#F56893" href="http://www.ohyeahlady.com/en/search/discount.asp" target="_blank">50% Off</a></div>
 <div style="float: left;margin: 10px 5px;font-size: 12px;color: red;"><img src="./src/banquan.jpg" width="14" align="absmiddle" border="0">
-<a style="color:#F56893" href="http://www.ohyeahlady.com/en/search/copyright.asp" target="_blank">Ohyeah Copyright</a></div>	
+<a style="color:#F56893" href="http://www.ohyeahlady.com/en/search/copyright.asp" target="_blank">JIEYA Copyright</a></div>	
 
 	<script language="javascript" type="text/javascript" src="./src/search.js "></script><form method="post" id="searchform" name="form2" class="search_input" action="http://www.ohyeahlady.com/en/search/" onsubmit="return checkSearch(this)">
 <input type="text" value="Search..." name="keyword" class="myinput" onclick="this.value=&#39;&#39;;" onfocus="this.value=&#39;&#39;" onblur="if (value ==&#39;&#39;){value=&#39;Search...&#39;}">
