--- a/lxt/pro15620.html
+++ b/lxt/pro15620.html
@@ -267,7 +267,7 @@ var obj=document.getElementById(x);
       </div>
       <div class="mcright"> 
 		       <div class="mc02">
-          <h2 class="mc0201_11"><a href="http://www.ohyeahlady.com/">Home</a> &gt; <a href="http://www.ohyeahlady.com/en/html/class/81_1.html">Plus Size Panties</a> &gt; <span class="proname">Plus Size Leather Zipper Black Panty</span></h2>
+          <h2 class="mc0201_11"><a href="http://www.ohyeahlady.com/">Home</a> &gt; <a href="http://www.ohyeahlady.com/en/html/class/81_1.html">Plus Size Panties</a> &gt; <span class="proname"> JIEYA 3-pack Womens Sexy Panties Lace Floral Underwear Briefs-Assorted Color</span></h2>
           <div class="prod_detail">
 		   <table style="width:845px;" border="0" cellpadding="0" cellspacing="0" class="prod_rw">
 <tbody><tr>
@@ -275,7 +275,7 @@ var obj=document.getElementById(x);
 <div style="margin: -10px 0px 10px 16px;"><a style="margin: 0px 10px;" href="javascript:void(0)" onmouseover="document.getElementById(&#39;mainpic&#39;).src =./src/color1.jpg;document.getElementById(&#39;mainpicurl&#39;).href=./src/color2.jpg;"><img style="border: 1px solid grey;" src="./src/color4.jpg" width="56px"></a><a style="margin: 0px 10px;" href="http://www.ohyeahlady.com/en/html/prod_detail/Product_15619.html" onmouseover="document.getElementById(&#39;mainpic&#39;).src =./src/color2.jpg;;document.getElementById(&#39;mainpicurl&#39;).href=./src/color2.jpg"><img style="border: 1px solid grey;" src="./src/color3.jpg" width="56px"></a></div></td><td valign="top"><table style="width:488px;" border="0" cellpadding="0" cellspacing="0" class="prod_r">
 <tbody><tr>
 <td width="80">Product Name </td>
-<td width="240" align="left"><span class="bold">Plus Size Leather Zipper Black Panty</span></td>
+<td width="240" align="left"><span class="bold"> JIEYA 3-pack Womens Sexy Panties Lace Floral Underwear Briefs-Assorted Color</span></td>
 </tr>
 <tr>
 <td>Item No </td>
